k8s/workingcalendar-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Windows\system32\kompose.exe convert -f ..\docker-compose.yml
    kompose.controller.type: deployment
    kompose.service.type: headless
    kompose.version: 1.26.0 (40646f47)
    kompose.volume.type: persistentVolumeClaim
  name: workingcalendar-postgres
  namespace: workingcalendar
  labels:
    io.kompose.service: workingcalendar-postgres
    app: workingcalendar
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: workingcalendar-postgres
  type: ClusterIP
