k8s/workingcalendar-server-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Windows\system32\kompose.exe convert -f ..\docker-compose.yml
    kompose.controller.type: deployment
    kompose.service.expose: 231977.fornex.cloud
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.0 (40646f47)
  name: workingcalendar-server
  namespace: workingcalendar
  labels:
    io.kompose.service: workingcalendar-server
    app.kubernetes.io/name: workingcalendar
spec:
  ports:
    - name: "http"
      port: 20080
      targetPort: 20080
    - name: "https"
      port: 20443
      targetPort: 20080
  selector:
    io.kompose.service: workingcalendar-server
  # externalIPs:
  # - 79.132.140.197
  type: LoadBalancer
