k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workingcalendar
  namespace: workingcalendar
  annotations:
    # cert-manager.io/issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-production 
    # acme.cert-manager.io/http01-edit-in-place: "false" # Error with or without
    # cert-manager.io/issue-temporary-certificate: "true" # Error with or without
    # acme.cert-manager.io/http01-edit-in-place: "true" 
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
  - host: workingcalendar.ru
    http:
      paths:
      - backend:
          service:
            name: workingcalendar-server
            port:
              number: 20080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - workingcalendar.ru
    secretName: tls-231977.fornex.cloud-secret-prod
    # secretName: tls-231977.fornex.cloud-secret
